Removed main tab align issue on window width change

--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -346,14 +346,14 @@ h6 {
 }
 .main-menu ul li {
     display: inline-block;
-    width: 125px;
+    width: 100px;
     text-align: center;
     line-height: 102px;
 }
 .main-menu ul li a {
     color: white;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 15px;
     text-transform: uppercase;
     outline: 0;
     border: 0;
@@ -470,8 +470,7 @@ h6 {
 .bx-controls-direction a {
     width: 40px;
     height: 40px;
-    /*background-color: rgba(0, 0, 0, 0.9);*/
-    background-color:#26b864;
+    background-color: rgba(0, 0, 0, 0.9);
     display: block;
     float: left;
     margin-right: 2px;
